WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61241
REGRESSION (
r82144
): Icon overlaps text in Twitter message dialog
https://bugs.webkit.org/show_bug.cgi?id=61241
Summary
REGRESSION (r82144): Icon overlaps text in Twitter message dialog
mitz
Reported
2011-05-21 13:37:45 PDT
REGRESSION (
r82144
): Icon overlaps text in Twitter message dialog
Attachments
Add midpoints for positioned objects when adding a midpoint behind the current character
(21.29 KB, patch)
2011-05-21 13:44 PDT
,
mitz
darin
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-03
(1.26 MB, application/zip)
2011-05-21 15:01 PDT
,
WebKit Review Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-05-21 13:38:24 PDT
<
rdar://problem/9479926
> Reduction: X <img style="position: absolute;" src="#"> Y
mitz
Comment 2
2011-05-21 13:44:34 PDT
Created
attachment 94327
[details]
Add midpoints for positioned objects when adding a midpoint behind the current character
WebKit Review Bot
Comment 3
2011-05-21 15:01:04 PDT
Comment on
attachment 94327
[details]
Add midpoints for positioned objects when adding a midpoint behind the current character
Attachment 94327
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8722507
New failing tests: fast/block/positioning/058.html
WebKit Review Bot
Comment 4
2011-05-21 15:01:08 PDT
Created
attachment 94329
[details]
Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Darin Adler
Comment 5
2011-05-21 21:22:20 PDT
Comment on
attachment 94327
[details]
Add midpoints for positioned objects when adding a midpoint behind the current character View in context:
https://bugs.webkit.org/attachment.cgi?id=94327&action=review
> Source/WebCore/rendering/RenderBlockLineLayout.cpp:1777 > +void TrailingObjects::updateMidpointsForTrailingBoxes(LineMidpointState& lineMidpointState, const InlineIterator& lBreak, bool mergeWithLineBreak)
Both call sites are passing constants, and the false and true at the call sites are completely opaque, so this is one of those cases where an enum would make things clearer than a bool.
mitz
Comment 6
2011-05-21 21:46:39 PDT
Fixed in
r87026
. <
http://trac.webkit.org/changeset/87026
>
Ademar Reis
Comment 7
2011-05-23 07:48:10 PDT
Revision
r87026
cherry-picked into qtwebkit-2.2 with commit c4e7010 <
http://gitorious.org/webkit/qtwebkit/commit/c4e7010
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug