<rdar://problem/9479926> REGRESSION (r82144): Icon overlaps text in Twitter message dialog https://bugs.webkit.org/show_bug.cgi?id=61241

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/block/positioning/start-ignoring-before.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::TrailingObjects::updateMidpointsForTrailingBoxes): Added a boolean parameter saying
whether to merge the first trailing space with the line break.
(WebCore::RenderBlock::LineBreaker::nextLineBreak): When adding a midpoint behind the current
character, account for trailing positioned objects that occurred after the midpoint by calling
updateMidpointsForTrailingBoxes(), which adds midpoints for them.

LayoutTests:

* fast/block/positioning/start-ignoring-before-expected.png: Added.
* fast/block/positioning/start-ignoring-before-expected.txt: Added.
* fast/block/positioning/start-ignoring-before.html: Added.



Canonical link: https://commits.webkit.org/76625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87026 268f45cc-cd09-0410-ab3c-d52691b4dbfc